--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,4 +25,7 @@
     <string name="error_field_required">Required</string>
     <string name="forgot_password">Forgot Password?</string>
     <string name="create_account">Register</string>
+
+    <string name="facebook_app_id">106930017424222</string>
+    <string name="fb_login_protocol_scheme">fb106930017424222</string>
 </resources>
