--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,4 +28,9 @@
 
     <string name="facebook_app_id">106930017424222</string>
     <string name="fb_login_protocol_scheme">fb106930017424222</string>
+
+    <string name="habit_name"> Drink 8 glasses of water</string>
+    <string name="habit_days">21 days</string>
+
+    <string name="quote">"It’s going to be hard, but hard does not mean impossible."</string>
 </resources>
