Fixed Bottom Nav View(with Fragments) +Icons +hide keyboard

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -42,4 +42,5 @@
     <string name="days">days</string>
     <string name="on_days">On days</string>
     <string name="add_photo">Choose photo</string>
+    <string name="calendar">Calendar</string>
 </resources>
