--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,6 +34,7 @@
     <string name="hint_task_title">Title</string>
 
     <string name="quote">"It’s going to be hard, but hard does not mean impossible."</string>
+    <string name="SplashQuote">"Be better than yesterday."</string>
     <string name="title_label">Title</string>
     <string name="description_label">Description</string>
     <string name="remind_label">Remind</string>
